fixed header height on mobile

--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -86,8 +86,7 @@
   &__mobile-back {
     font-size: 2.2rem;
     color: #06babf;
-    height: 3.4rem;
-    margin-top: 1.5rem;
+    height: 4.2rem;
     color: #06babf;
     position: absolute;
     z-index: 10000;
@@ -96,6 +95,7 @@
 
     & > span {
       margin-left: 2rem;
+      margin-top: 1.5rem;
     }
   }
 
@@ -771,7 +771,7 @@
     }
 
     &--ms {
-      grid-template-rows: 20.5rem 11rem repeat(4, 5rem) 0rem;
+      grid-template-rows: 20.5rem 11rem repeat(5, 5rem) 0rem;
     }
   }
 
@@ -823,6 +823,11 @@
           font-size: 2.5rem;
         }
       }
+    }
+
+    &--extra {
+      grid-row: 7;
+      grid-column: 2/5;
     }
   }
 
